--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Barber HTML-5 Template </title>
+    <title> Por las Barbas de mi Abuela</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -57,7 +57,7 @@
                                         <ul id="navigation">
                                             <li class="active"><a href="index.html">Home</a></li>
                                             <li><a href="about.html">About</a></li>
-                                            <li><a href="services.html">Services</a></li>
+                                            <li><a href="services.html">Servicios</a></li>
                                             <li><a href="portfolio.html">Portfolio</a></li>
                                             <li><a href="blog.html">Blog</a>
                                                 <ul class="submenu">
@@ -66,7 +66,7 @@
                                                     <li><a href="elements.html">Element</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="contact.html">Contact</a></li>
+                                            <li><a href="contact.html">Contacto</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -95,8 +95,8 @@
                         <div class="row">
                             <div class="col-xl-8 col-lg-9 col-md-11 col-sm-10">
                                 <div class="hero__caption">
-                                    <span data-animation="fadeInUp" data-delay="0.2s">with patrick potter</span>
-                                    <h1 data-animation="fadeInUp" data-delay="0.5s">Our Hair Style make your look elegance</h1>
+                                    <span data-animation="fadeInUp" data-delay="0.2s">Adrian Leonel</span>
+                                    <h1 data-animation="fadeInUp" data-delay="0.5s">Haz que tu look sea elegante</h1>
                                 </div>
                             </div>
                         </div>
@@ -108,8 +108,8 @@
                         <div class="row">
                             <div class="col-xl-8 col-lg-9 col-md-11 col-sm-10">
                                 <div class="hero__caption">
-                                    <span data-animation="fadeInUp" data-delay="0.2s">with patrick potter</span>
-                                    <h1 data-animation="fadeInUp" data-delay="0.5s">Our Hair Style make your look elegance</h1>
+                                    <span data-animation="fadeInUp" data-delay="0.2s">Adrian Leonel</span>
+                                    <h1 data-animation="fadeInUp" data-delay="0.5s">Haz que tu look sea elegante</h1>
                                 </div>
                             </div>
                         </div>
@@ -118,13 +118,13 @@
             </div>
             <!-- stroke Text -->
             <div class="stock-text">
-                <h2>Get More confident</h2>
-                <h2>Get More confident</h2>
+                <h2>Gana confianza</h2>
+                <h2>Gana confianza</h2>
             </div>
              <!-- Arrow -->
              <div class="thumb-content-box">
                 <div class="thumb-content">
-                    <h3>make an appointment now</h3>
+                    <h3>hacer una cita ahora</h3>
                     <a href="#"> <i class="fas fa-long-arrow-alt-right"></i></a>
                 </div>
             </div>
@@ -144,8 +144,8 @@
                         <div class="about-caption">
                             <!-- Section Tittle -->
                             <div class="section-tittle section-tittle3 mb-35">
-                                <span>About Our company</span>
-                                <h2>52 Years Of Experience In Hair cut!</h2>
+                                <span>Sobre Nostros</span>
+                                <h2>10 años de experiencia cortando el cabello!</h2>
                             </div>
                             <p class="mb-30 pera-bottom">Brook presents your services with flexible, convenient and cdpoe layouts. You can select your favorite layouts & elements for cular ts with unlimited ustomization possibilities. Pixel-perfreplication of the designers is intended.</p>
                             <p class="pera-top mb-50">Brook presents your services with flexible, convefnient and ent anipurpose layouts. You can select your favorite.</p>
@@ -167,8 +167,8 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-xl-7 col-lg-8 col-md-11 col-sm-11">
                         <div class="section-tittle text-center mb-90">
-                            <span>Professional Services</span>
-                            <h2>Our Best services that  we offering to you</h2>
+                            <span>Servicio Profesional</span>
+                            <h2>Le ofrecemos el mejor servicio</h2>
                         </div>
                     </div>
                 </div>
@@ -218,8 +218,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-8 col-lg-8 col-md-11 col-sm-11">
                         <div class="section-tittle text-center mb-100">
-                            <span>Professional Teams</span>
-                            <h2>Our award winner hair cut exparts for you</h2>
+                            <span>Equipos Profesionals</span>
+                            <h2>Nuestros expertos en corte de cabello</h2>
                         </div>
                     </div>
                 </div>
@@ -279,7 +279,7 @@
                 <div class="row justify-content-end">
                     <div class="col-xl-7 col-lg-7">
                         <div class="section-tittle mb-50">
-                            <span>Our Best Pricing</span>
+                            <span>Lista de Precios</span>
                             <h2>We provide best price<br> in the city!</h2>
                         </div>
                         <!-- Pricing  -->
@@ -327,8 +327,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-6 col-lg-7 col-md-9 col-sm-10">
                         <div class="section-tittle text-center mb-100">
-                            <span>our image gellary</span>
-                            <h2>some images from our barber shop</h2>
+                            <span>Galeria de imagenes</span>
+                            <h2>Algunas imagenes de nuestra Peluqueria</h2>
                         </div>
                     </div>
                 </div>
